test/spec_vectors/ref_eq/fail/module_2.wat
(module (func (export "eq") (param $r (ref null any)) (result i32) (ref.eq (local.get $r) (local.get $r))))